log-output/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: data-volume
          emptyDir: {}
        - name: pingpong-volume
          persistentVolumeClaim:
            claimName: pingpong-pvc
      containers:
      - name: logoutput
        image: pyryl/logoutput@sha256:d7418621bbad4438d5e9cf465119cae054f4822a78d17a259cd190521b3a5da0
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
        - name: pingpong-volume
          mountPath: /app/pingpong-data
          readOnly: true
      - name: loginput
        image: pyryl/loginput@sha256:516ab1c6530e9670f45cfdc029a2bb9c3b8ce2b8baf054c0235c55e7b08b7855
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
