log-output/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: pinglog
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 3000
