log-output/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ing
  namespace: pinglog
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: logoutput-svc
            port:
              number: 1234
